// Person table
Table persons {
  person_id SERIAL [pk]
  first_name VARCHAR(45)
  last_name VARCHAR(45)
  personal_attribute_id INT
  family_id INT
  relationship_id INT
  marital_level_id INT
  property_ownership_id INT
  occupation_id INT
  created_at TIMESTAMP DEFAULT now()
  Indexes {
    (last_name, first_name)
  }
}

// Personal Attributes table
Table personal_attributes {
  attribute_id SERIAL [pk]
  person_id INT
  race VARCHAR(45)
  sex VARCHAR(45)
  age INT
  created_at TIMESTAMP DEFAULT now()
  Indexes {
    (person_id)
  }
}

// Family table
Table families {
  family_id SERIAL [pk]
  person_id INT
  family INT
  dwelling INT
  hoh_first_name VARCHAR(45)
  hoh_last_name VARCHAR(45)
  relationship_id INT
  created_at TIMESTAMP DEFAULT now()
  Indexes {
    (dwelling)
    (hoh_last_name, hoh_first_name)
  }
}

// Relationship table
Table relationships {
  relationship_id SERIAL [pk]
  attribute_id INT
  person_id INT
  family_id INT
  relation_to_hoh VARCHAR(45)
  created_at TIMESTAMP DEFAULT now()
  Indexes {
    (person_id, family_id)
  }
}

// Property Ownership table
Table property_ownership {
  ownership_id SERIAL [pk]
  attribute_id INT
  person_id INT
  owned_rented VARCHAR(45)
  created_at TIMESTAMP DEFAULT now()
  Indexes {
    (person_id)
  }
}

// Occupations table
Table occupations {
  occupation_id SERIAL [pk]
  attribute_id INT
  person_id INT
  work VARCHAR(45)
  created_at TIMESTAMP DEFAULT now()
  Indexes {
    (person_id)
  }
}

// Marital Level table
Table marital_levels {
  marital_level_id SERIAL [pk]
  attribute_id INT
  person_id INT
  marital_status VARCHAR(45)
  created_at TIMESTAMP DEFAULT now()
  Indexes {
    (person_id)
  }
}

// Foreign Key References
Ref: personal_attributes.attribute_id < persons.personal_attribute_id
Ref: families.family_id < persons.family_id
Ref: relationships.relationship_id < persons.relationship_id
Ref: marital_levels.marital_level_id < persons.marital_level_id
Ref: property_ownership.ownership_id < persons.property_ownership_id
Ref: occupations.occupation_id < persons.occupation_id
Ref: relationships.relationship_id < families.relationship_id

// Additional References for person_id relationships
Ref: persons.person_id < personal_attributes.person_id
Ref: persons.person_id < families.person_id
Ref: persons.person_id < relationships.person_id
Ref: persons.person_id < property_ownership.person_id
Ref: persons.person_id < occupations.person_id
Ref: persons.person_id < marital_levels.person_id
Ref: families.family_id < relationships.family_id
